Renamed 'Math Adventure' to 'Reward Maths' throughout the application

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+<head>    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Adventure</title>
+    <title>Reward Maths</title>
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <!-- Login Screen -->
+<body>    <!-- Login Screen -->
     <div id="loginScreen" class="login-container">
-        <h1 class="login-title">🧮 Math Adventure</h1>
+        <h1 class="login-title">🧮 Reward Maths</h1>
         <div class="login-form">
             <input type="text" id="usernameInput" class="login-input" placeholder="Username" required>
             <input type="password" id="passwordInput" class="login-input" placeholder="Password" required>
@@ -21,9 +19,8 @@
 
     <!-- Game Screen (hidden at start) -->
     <div id="gameScreen" class="game-container" style="display: none;">
-        <div class="main-game">
-            <div class="user-header">
-                <h1 class="title">🎯 Math Adventure</h1>
+        <div class="main-game">            <div class="user-header">
+                <h1 class="title">🎯 Reward Maths</h1>
                 <button class="btn" onclick="logout()" style="background: #e2e8f0; color: #4a5568;">Logout</button>
             </div>
             
