Fixed Submit Answer functionality for both button click and Enter key

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
                 <div class="question-container">
                     <div class="question" id="question"></div>
                     <input type="number" class="answer-input" id="answerInput" placeholder="?">
-                </div>
-                  <div class="feedback" id="feedback"></div>
+                </div>                <div class="feedback" id="feedback"></div>
                 
-                <button class="btn" id="submitBtn" onclick="checkAnswer()">Submit Answer</button>
+                <button class="btn" id="submitBtn">Submit Answer</button>
             </div>
 
             <div id="roundComplete" style="display: none;">
