--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <!-- Game Screen -->
     <div id="gameScreen" class="screen" style="display: none;">
         <h1>Math Game</h1>
+        <div class="progress-bar-wrapper">
+            <div id="progressBarContainer" class="progress-bar-container">
+                <div id="progressBar" class="progress-bar"></div>
+            </div>
+            <div id="progressText" class="progress-text">0/10</div>
+        </div>
         <div id="question" class="question"></div>
         <input type="number" id="answer" placeholder="Your answer">
         <button id="submitButton">Submit</button>
