--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="progressText" class="progress-text">0/10</div>
         </div>
         <div id="question" class="question"></div>
-        <input type="number" id="answer" placeholder="Your answer">
+        <input type="number" id="answer" placeholder="" autocomplete="off" spellcheck="false">
         <button id="submitButton">Submit</button>
         <p id="feedback" class="feedback"></p>
         <button id="logoutButton" class="logout-btn">Logout</button>
