Enhanced UI: Bigger numbers, personalized popups, and reward milestone system
- Made level numbers (2.5em) and progress text (1.4em) much more prominent
- Added personalized level-up popups with themed messages:
  * Tom: Marvel/DC/Jurassic World Camp Cretaceous themes
  * Eliza: Anime/magical girl themes
  * Patrick: General encouragement
- Implemented reward milestone system with visual markers at levels 10,20,30...100
- Added popup modal system with smooth animations
- Reward markers show as grayed out until unlocked, then turn green
- Special reward unlock popups when reaching milestone levels
- Enhanced user experience with bigger, clearer progress indicators

--- a/index.html
+++ b/index.html
@@ -37,8 +37,17 @@
             <div class="level-bar-label">Level</div>
             <div class="level-bar-outer">
                 <div id="levelBar" class="level-bar"></div>
+                <div class="reward-markers" id="rewardMarkers"></div>
             </div>
             <div id="levelText" class="level-bar-text">1</div>
+        </div>
+    </div>
+
+    <!-- Popup Modal -->
+    <div id="popupModal" class="popup-modal" style="display: none;">
+        <div class="popup-content">
+            <div id="popupMessage" class="popup-message"></div>
+            <button id="popupOkButton" class="popup-ok-btn">OK</button>
         </div>
     </div>
 
