Fixed UI issues and improved game mechanics
- Fixed reward marker alignment with translateY(-50%) for proper centering
- Added input validation to restrict answer field to digits 0-9 only
- Implemented 5-failure rule: level down only after 5 consecutive wrong answers
- Added personalized level-down messages for each user (Tom/Eliza/Patrick)
- Blank answers are now quietly rejected without feedback
- Game waits for user to press OK before continuing to next round
- Enhanced input field with pattern and inputmode attributes for mobile
- Improved user experience with better failure handling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="progressText" class="progress-text">0/10</div>
         </div>
         <div id="question" class="question"></div>
-        <input type="number" id="answer" placeholder="" autocomplete="off" spellcheck="false">
+        <input type="number" id="answer" placeholder="" autocomplete="off" spellcheck="false" pattern="[0-9]*" inputmode="numeric">
         <button id="submitButton">Submit</button>
         <p id="feedback" class="feedback"></p>
         <button id="logoutButton" class="logout-btn">Logout</button>
